fix place details z-index

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -141,7 +141,9 @@ header {
 .m__window {
   box-shadow: 14px 5px 25px 3px rgba(0, 0, 0, 0.23);
   @media (max-width: 576px) {
+    top: 80px !important;
     position: fixed !important;
+    height: 90% !important;
   }
   z-index: 100004;
 }
